# untitled-bare-metal

./: .gdbinit  .gitattributes  .gitignore  .pre-commit-config.yaml  .vimrc  CMakeLists.txt  CMakeToolchain.txt  Makefile  TODO  backtrace.py  bt.rb  bt.sh  build.zig  calculator_interface.yaml  cmake.sh  configure.rb  configure.sh  debug.c  dump.py  dump.rb  dump.sh  errors.yml  fields.yml  format.py  format.rb  format.sh  gen.rb  generate.py  interface.yml  limine.cfg  limine.conf  link.ld  main.c  page_alloc.c  run.py  run.rb  run.sh  syscalls.yml
.github/workflows/: build.yml
arch/arm64/: intrin.c  link.ld  mmu.c
arch/host/: host_support.c
arch/x86_64/: asm.h  debug.c  entry.S  entry.c  frame.c  fw_cfg.c  gdt.c  idt.c  initrd.c  intrin.c  ints.c  ioapic.c  isrs.S  lapic.c  link.ld  memmap.c  mmu.c  page_alloc.c  pci.c  phy_mem.c  pic.c  smp.c  sse.c  syscall.S  syscall.c  x86_64.h
cmake/: DefineFileBasenameForSources.cmake  IDL.cmake  UserPrograms.cmake
cmake/toolchains/: arm64.cmake  x86_64-gcc.cmake  x86_64.cmake
idlgen/: generator.py
idlgen/templates/: client.j2  header.j2  server.j2
include/: assert.h  chacha.h  chacha20.h  ctype.h  elf.h  kernel.h  limine.h  list.h  pci.h  rng.h  slab.h  stdio.h  stdlib.h  string.h  tar.h
include/arch/arm64/: exports.h
include/arch/x86_64/: exports.h
include/kern/: arch.h  cap.h  elf.h  ipc.h  kernel.h  kernel_method_stubs.c  mem.h  methods.h  per_cpu.h  size.h  syscall.h  syscall_dispatch.c  task.h
include/kern/arch/x86_64/: exports.h
include/kernel/: arch.h  main.h
include/sys/: arch.h  bootinfo.h  cap.h  cdefs.h  ipc.h  lock.h  mem.h  per_cpu.h  slab.h  syscall.h  task.h  types.h  user_method_stubs.h
kern/: CMakeLists.txt  alloc.c  boot.c  cap.c  cdt.c  debug.c  elf.c  ipc.c  main.c  syscall.c
kern/arch/host/: host_support.c
kern/arch/x86_64/: debug.c  frame.c  gdt.c  idt.c  ints.c  ioapic.c  mmu.c  phy_mem.c  sse.c  syscall.S  x86_64.h
kernel/: CMakeLists.txt  debug.c  elf.c  ipc.c  main.c  msg.c  page_alloc.c  syscall.c  task.c
kernel/objects/: untyped.c
lib/: CMakeLists.txt  chacha.c  chacha20.c  elf.c  exec.c  hexdump.c  lib.c  lib.h  mem_alloc.c  num.c  print.c  rng.c  slab.c  slab_alloc.c  sort.c  spin_lock.c  stream.h  string.c  syscall.c  tar.c
lib/arch/x86_64/: crt0.c
user/: CMakeLists.txt  calculator_server.c  calculator_server.h  captest.c  captest.h  cdt_test.c  cptr_alloc.c  e1000e_driver.c  exec.c  init.c  lib.c  lib.h  pci.c  pci_manager.c  pci_util.h  serial_broker.c  serial_driver.c  serial_driver.h  testproc.c  userland.c
user/calculator/: CMakeLists.txt  calculator.c  calculator.yaml
user/calculator2/: CMakeLists.txt  calculator.c  calculator2.yaml
user/lib/: lib.c  pci.c
user/main/: CMakeLists.txt  main.c
